Update to sync with README Updates

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "args": ["--algo=APPO", "--env=quadrotor_multi", "--replay_buffer_sample_prob=0", "--quads_use_numba=False", "--train_dir=home/resl/quad-swarm-rl/swarm_rl/train_dir/paper_quads_multi_mix_baseline_8a_attn_v116/quad_mix_baseline-8_mixed_attn_", "--experiment=00_quad_mix_baseline-8_mixed_attn_q.n.e.typ_attention_see_0D"],
+            "args": ["--algo=APPO", "--env=quadrotor_multi", "--replay_buffer_sample_prob=0", "--quads_use_numba=False", "--train_dir=/home/resl/quad-swarm-rl/train_dir", "--experiment=swarm_rl"],
             "console": "integratedTerminal",
             "justMyCode": true
         }
